package GameProtocol.CS;

//本文件中定义所有的客户端和服务器的通信协议格式

import "GameProtocol_Common.proto";
import "GameProtocol_Account.proto";
import "GameProtocol_World.proto";
import "GameProtocol_Zone.proto";
import "GameProtocol_RegAuth.proto";
import "GameProtocol_MsgID.proto";

//客户端服务器通信的消息结构体
message CSMsgBody
{
	//------------------------------------------------------------------------------	
	//游戏帐号系统相关的协议，使用消息的ID为 1-20
	//RegAuthDB相关协议
	optional RegAuthDB_AddAccount_Request	m_stRegAuthDB_AddAccount_Request = 1;		//帐号DB新增帐号请求，对应MSGID_REGAUTHDB_ADDACCOUNT_REQUEST
	optional RegAuthDB_AddAccount_Response	m_stRegAuthDB_AddAccount_Response = 2;		//帐号DB新增帐号返回，对应MSGID_REGAUTHDB_ADDACCOUNT_RESPONSE
	optional RegAuthDB_DelAccount_Request	m_stRegAuthDB_Delete_Request = 3;			//帐号DB删除帐号请求，对应MSGID_REGAUTHDB_DELETE_REQUEST
	optional RegAuthDB_DelAccount_Response	m_stRegAuthDB_Delete_Response = 4;			//帐号DB删除帐号返回，对应MSGID_REGAUTHDB_DELETE_RESPONSE
	optional RegAuthDB_GetAccount_Request	m_stRegAuthDB_Fetch_Request = 5;			//帐号DB拉取帐号请求，对应MSGID_REGAUTHDB_FETCH_REQUEST
	optional RegAuthDB_GetAccount_Response	m_stRegAuthDB_Fetch_Response = 6;			//帐号DB拉取帐号返回，对应MSGID_REGAUTHDB_FETCH_RESPONSE

	//RegAuth相关协议
	optional RegAuth_RegAccount_Request		m_stRegAuth_RegAccount_Request = 10;		//帐号服务注册帐号请求，对应MSGID_REGAUTH_REGACCOUNT_REQUEST
	optional RegAuth_RegAccount_Response	m_stRegAuth_RegAccount_Response = 11;		//帐号服务注册帐号返回，对应MSGID_REGAUTH_REGACCOUNT_RESPONSE	
	optional RegAuth_AuthAccount_Request	m_stRegAuth_AuthAccount_Request = 12;		//帐号服务认证帐号请求，对应MSGID_REGAUTH_AUTHACCOUNT_REQUEST
	optional RegAuth_AuthAccount_Response	m_stRegAuth_AuthAccount_Response = 13;		//帐号服务认证帐号返回，对应MSGID_REGAUTH_AUTHACCOUNT_RESPONSE
	optional RegAuth_PlatformAuth_Request	m_stRegAuth_PlatformAuth_Request = 16;		//账号服务平台认证请求，对应MSGID_REGAUTH_PLATFORMAUTH_REQUEST
	optional RegAuth_PlatformAuth_Response	m_stRegAuth_PlatformAuth_Response = 17;		//账号服务平台认证返回，对应MSGID_REGAUTH_PLATFORMAUTH_RESPONSE

	//------------------------------------------------------------------------------	


	
	//------------------------------------------------------------------------------	

	//游戏完整功能相关的协议，使用的消息ID为 20 及以上 
	optional World_WriteLog_Request			m_stWorld_WriteLog_Request = 20;			//记录日志的请求，对应MSGID_WORLD_WRITELOG_REQUEST
	optional CreateRole_Account_Request		m_stAccountCreateRoleRequest = 21;			//创建角色的请求,对应MSGID_ACCOUNT_CREATEROLE_REQUEST
	optional CreateRole_Account_Response	m_stAccountCreateRoleResponse = 22;			//创建角色请求的返回,对应MSGID_ACCOUNT_CREATEROLE_RESPONSE
	optional Account_ListZone_Request		m_stAccount_ListZone_Request = 23;			//拉取区服务器的请求，对应MSGID_ACCOUNT_LISTZONE_REQUEST
	optional Account_ListZone_Response		m_stAccount_ListZone_Response = 24;			//拉取区服务器的的返回，对应MSGID_ACCOUNT_LISTZONE_RESPONSE
	optional DeleteRole_Account_Request		m_stAccountDeleteRoleRequest = 25;			//删除玩家角色的请求，对应MSGID_ACCOUNT_DELETEROLE_REQUEST
	optional DeleteRole_Account_Response	m_stAccountDeleteRoleResponse = 26;			//删除玩家角色的返回，对应MSGID_ACCOUNT_DELETEROLE_RESPONSE
	optional Account_ListRole_Request		m_stAccountListRoleRequest = 27;			//查询玩家角色的请求，对应MSGID_ACCOUNT_LISTROLE_REQUEST
	optional Account_ListRole_Response		m_stAccountListRoleResponse = 28;			//查询玩家角色的返回，对应MSGID_ACCOUNT_LISTROLE_RESPONSE

	//optional LogoutServer_Reuqest			m_stLogoutServer_Request = 29;				//登出服务器的请求，对应MSGID_LOGOUTSERVER_REQUEST
	optional LogoutServer_Response			m_stLogoutServer_Response = 30;				//登出服务器的返回，对应MSGID_LOGOUTSERVER_RESPONSE

	optional World_ZoneChanged_Notify		m_stWorld_ZoneChanged_Notify = 31;			//区服务器更新的通知，对应MSGID_WORLD_ZONECHANGED_NOTIFY
	optional World_CreateRole_Request		m_stWorld_CreateRole_Request = 32;			//世界服务器创建角色的请求,对应MSGID_WORLD_CREATEROLE_REQUEST
	optional World_CreateRole_Response		m_stWorld_CreateRole_Response = 33;			//世界服务器创建角色的返回，对应MSGID_WORLD_CREATEROLE_RESPONSE
	optional World_FetchRole_Request		m_stWorld_FetchRole_Request = 34;			//世界拉取角色数据的请求,对应MSGID_WORLD_FETCHROLE_REQUEST
	optional World_FetchRole_Response		m_stWorld_FetchRole_Response = 35;			//世界拉取角色数据的返回，对应MSGID_WORLD_FETCHROLE_RESPONSE
	
	optional Zone_Logout_Notify				m_stZone_Logout_Notify = 36;				//Zone Server 玩家下线的通知,对应MSGID_ZONE_LOGOUT_NOTIFY

	optional World_UpdateRole_Request		m_stWorld_UpdateRole_Request = 37;			//World更新数据的请求,对应MSGID_WORLD_UPDATEROLE_REQUEST
	optional World_UpdateRole_Response		m_stWorld_UpdateRole_Response = 38;			//World更新数据的返回,对应MSGID_WORLD_UPDATEROLE_RESPONSE
	optional Zone_GetFriendInfo_Request		m_stZone_GetFriendInfo_Request = 39;		//Zone拉取好友的请求，对应MSGID_ZONE_FRIENDINFO_REQUEST
	optional Zone_GetFriendInfo_Response	m_stZone_GetFriendInfo_Response = 40;		//Zone拉取好友的返回，对应MSGID_ZONE_FRIENDINFO_RESPONSE

	//玩家登录相关的协议
	optional Zone_LoginServer_Request		m_stZone_LoginServer_Request = 41;			//Zone的玩家登录请求，对应MSGID_ZONE_LOGINSERVER_REQUEST
	optional Zone_LoginServer_Response		m_stZone_LoginServer_Response = 42;			//Zone的玩家登录返回，对应MSGID_ZONE_LOGINSERVER_RESPONSE
	
	//世界踢人下线的相关协议
	optional World_KickRole_Request			m_stWorld_KickRole_Request = 43;			//World踢人下线的请求，对应MSGID_WORLD_KICKROLE_REQUEST
	optional World_KickRole_Response		m_stWorld_KickRole_Response = 44;			//World踢人下线的返回，对应MSGID_WORLD_KICKROLE_RESPONSE

	//分区向世界上报状态的协议
	optional Zone_OnlineRole_Request		m_stZone_OnlineRole_Request = 45;			//Zone上报状态的请求，对应MSGID_ZONE_ONLINEROLENUM_REQUEST

	//World向Cluster上报状态相关协议
	optional World_OnlineStat_Request		m_stWorld_OnlineStat_Request = 46;			//World上报状态的请求，对应MSGID_WORLD_ONLINESTAT_REQUEST
	optional World_OnlineStat_Response		m_stWorld_OnlineStat_Response = 47;			//World上报状态的返回，对应MSGID_WORLD_ONLINESTAT_RESPONSE

	
	//GM管理员GM操作的协议
	optional GameMaster_Request				m_stZone_GameMaster_Request = 48;			//GM管理员GM操作的请求，对应MSGID_ZONE_GAMEMASTER_REQUEST
	optional GameMaster_Response			m_stZone_GameMaster_Response = 49;			//GM管理员GM操作的返回，对应MSGID_ZONE_GAMEMASTER_RESPONSE
	optional GameMaster_Request				m_stWorld_GameMaster_Request = 50;			//World转发GM操作请求，对应MSGID_WORLD_GAMEMASTER_REQUEST
	optional GameMaster_Response			m_stWorld_GameMaster_Response = 51;			//World转发GM操作返回，对应MSGID_WORLD_GAMEMASTER_RESPONSE

	//名字服务器中增加新名字的协议
	optional AddNewName_Request				m_stAddNewName_Request = 52;				//名字服务增加名字请求，对应MSGID_ADDNEWNAME_REQUEST
	optional AddNewName_Response			m_stAddNewName_Response = 53;				//名字服务增加名字返回，对应MSGID_ADDNEWNAME_RESPONSE

	//名字服务器中删除名字的协议
	optional DeleteName_Request				m_stDeleteName_Request = 54;				//名字服务删除名字的请求，对应MSGID_DELETENAME_REQUEST
	optional DeleteName_Response			m_stDeleteName_Response = 55;				//名字服务删除名字的返回，对应MSGID_DELETENAME_RESPONSE

	//玩家角色登录的通知
	optional Zone_LoginServer_Notify		m_stLoginServer_Notify = 57;				//玩家登录的消息推送,对应MSGID_ZONE_LOGINSERVER_NOTIFY

	//玩家背包操作相关的协议
	optional Zone_RepOpera_Request			m_stZone_RepOpera_Request = 64;				//背包物品操作的请求，对应MSGID_ZONE_REPOPERA_REQUEST
	optional Zone_RepOpera_Response			m_stZone_RepOpera_Response = 65;			//背包物品操作的返回，对应MSGID_ZONE_REPOPERA_RESPONSE
	optional Zone_RepChange_Notify			m_stZone_RepChange_Notify = 70;				//背包物品发生变化的通知，对应MSGID_ZONE_REPCHANGE_NOTIFY
	optional World_OnlineExchange_Request	m_stWorld_OnlineExchange_Request = 71;		//World在线兑换请求，对应MSGID_WORLD_ONLINEEXCHANGE_REQUEST
	optional World_OnlineExchange_Response	m_stWorld_OnlineExchange_Response = 72;		//World在线兑换返回，对应MSGID_WORLD_ONLINEEXCHANGE_RESPONSE

	//玩家游戏资源变化的通知
	optional Zone_ResourceChange_Notify		m_stZone_ResourceChange_Notify = 73;		//玩家资源变化的通知，对应MSGID_ZONE_RESOURCECHANGE_NOTIFY

	//玩家聊天相关协议
	optional Zone_Chat_Request				m_stZone_Chat_Request = 76;					//玩家聊天的请求，对应MSGID_ZONE_CHAT_REQUEST
	optional Zone_Chat_Response				m_stZone_Chat_Response = 77;				//玩家聊天的返回，对应MSGID_ZONE_CHAT_RESPONSE
	optional World_Chat_Notify				m_stWorld_Chat_Notify = 78;					//世界聊天信息转发，对应MSGID_WORLD_CHAT_NOTIFY

	//玩家捕鱼相关协议
	optional Zone_DoFish_Request			m_stZone_DoFish_Request = 81;				//玩家进入鱼池的请求，对应MSGID_ZONE_DOFISH_REQUEST
	optional Zone_DoFish_Response			m_stZone_DoFish_Response = 82;				//玩家进入鱼池的返回，对应MSGID_ZONE_DOFISH_RESPONSE
	optional Zone_FormTime_Notify			m_stZone_FormTime_Notify = 83;				//鱼阵相关时间的通知，对应MSGID_ZONE_FORMTIME_NOTIFY
	optional Zone_SyncTime_Notify			m_stZone_SyncTime_Notify = 84;				//时间同步的通知，对应MSGID_ZONE_SYNCTIME_NOTIFY
	optional Zone_SeatUser_Notify			m_stZone_SeatUser_Notify = 85;				//座位玩家信息的通知，对应MSGID_ZONE_SEATUSER_NOTIFY
	optional Zone_FishInfo_Notify			m_stZone_FishInfo_Notify = 86;				//鱼池中鱼信息的通知，对应MSGID_ZONE_FISHINFO_NOTIFY
	optional Zone_BulletInfo_Notify			m_stZone_BulletInfo_Notify = 87;			//鱼池中子弹信息的通知，对应MSGID_ZONE_BULLETINFO_NOTIFY
	optional Zone_FormInfo_Notify			m_stZone_FormInfo_Notify = 88;				//鱼阵详细信息的通知，对应MSGID_ZONE_FORMINFO_NOTIFY
	optional Zone_ExitFish_Request			m_stZone_ExitFish_Request = 89;				//玩家退出鱼池的请求，对应MSGID_ZONE_EXITFISH_REQUEST
	optional Zone_ExitFish_Response			m_stZone_ExitFish_Response = 90;			//玩家退出鱼池的返回，对应MSGID_ZONE_EXITFISH_RESPONSE
	optional Zone_ExitFish_Notify			m_stZone_ExitFish_Notify = 91;				//玩家退出鱼池的通知，对应MSGID_ZONE_EXITFISH_NOTIFY
	optional Zone_ChangeGun_Request			m_stZone_ChangeGun_Request = 92;			//玩家切换炮台的请求，对应MSGID_ZONE_CHANGEGUN_REQUEST
	optional Zone_ChangeGun_Response		m_stZone_ChangeGun_Response = 93;			//玩家切换炮台的返回，对应MSGID_ZONE_CHANGEGUN_RESPONSE
	optional Zone_ChangeGun_Notify			m_stZone_ChangeGun_Notify = 94;				//玩家切换炮台的通知，对应MSGID_ZONE_CHANGEGUN_NOTIFY
	optional Zone_ShootBullet_Request		m_stZone_ShootBullet_Request = 95;			//玩家发射子弹的请求，对应MSGID_ZONE_SHOOTBULLET_REQUEST
	optional Zone_ShootBullet_Response		m_stZone_ShootBullet_Response = 96;			//玩家发射子弹的返回，对应MSGID_ZONE_SHOOTBULLET_RESPONSE
	optional Zone_ShootBullet_Notify		m_stZone_ShootBullet_Notify = 97;			//玩家发射子弹的通知，对应MSGID_ZONE_SHOOTBULLET_NOTIFY
	optional Zone_HitFish_Request			m_stZone_HitFish_Request = 98;				//玩家命中鱼的请求，对应MSGID_ZONE_HITFISH_REQUEST
	optional Zone_HitFish_Response			m_stZone_HitFish_Response = 99;				//玩家命中鱼的返回，对应MSGID_ZONE_HITFISH_RESPONSE
	optional Zone_HitFish_Notify			m_stZone_HitFish_Notify = 100;				//玩家命中鱼的通知，对应MSGID_ZONE_HITFISH_NOTIFY
	optional Zone_HitFormFish_Request		m_stZone_HitFormFish_Request = 101;			//玩家命中鱼阵鱼的请求，对应MSGID_ZONE_HITFORMFISH_REQUEST
	optional Zone_HitFormFish_Response		m_stZone_HitFormFish_Response = 102;		//玩家命中鱼阵鱼的返回，对应MSGID_ZONE_HITFORMFISH_RESPONSE
	optional Zone_BoomFishInfo_Notify		m_stZone_BoomFishInfo_Notify = 103;			//玩家电死鱼的通知，对应MSGID_ZONE_BOOMFISHINFO_NOTIFY
	optional Zone_AddTicket_Notify			m_stZone_AddTicket_Notify = 104;			//玩家增加鱼票的通知，对应MSGID_ZONE_ADDTICKET_NOTIFY
	optional Zone_FishUserUpdate_Notify		m_stZone_FishUserUpdate_Notify = 105;		//玩家捕鱼信息更新通知，对应MSGID_ZONE_FISHUSERUPDATE_NOTIFY

	//玩家抽奖相关协议
	optional Zone_Lottery_Request			m_stZone_Lottery_Request = 120;				//玩家抽奖的请求，对应MSGID_ZONE_LOTTERY_REQUEST
	optional Zone_Lottery_Response			m_stZone_Lottery_Response = 121;			//玩家抽奖的返回，对应MSGID_ZONE_LOTTERY_RESPONSE

	//玩家任务相关协议
	optional Zone_QuestChange_Notify		m_stZone_QuestChange_Notify = 130;			//玩家任务变化的通知，对应MSGID_ZONE_QUESTCHANGE_NOTIFY
	optional Zone_FinQuest_Request			m_stZone_FinQuest_Request = 131;			//玩家完成任务的请求，对应MSGID_ZONE_FINQUEST_REQUEST
	optional Zone_FinQuest_Response			m_stZone_FinQuest_Response = 132;			//玩家完成任务的返回，对应MSGID_ZONE_FINQUEST_RESPONSE
	optional Zone_GetReward_Notify			m_stZone_GetReward_Notify = 133;			//玩家领取奖励的通知，对应MSGID_ZONE_GETREWARD_NOTIFY
	optional Zone_GetLivness_Request		m_stZone_GetLivness_Request = 134;			//玩家领取活跃度奖励请求，对应MSGID_ZONE_GETLIVNESS_REQUEST
	optional Zone_GetLivness_Response		m_stZone_GetLivness_Response = 135;			//玩家领取活跃度奖励返回，对应MSGID_ZONE_GETLIVNESS_RESPONSE

	//玩家兑换相关协议
	optional Zone_SetExchange_Request		m_stZone_SetExchange_Request = 140;			//玩家设置兑换信息的请求，对应MSGID_ZONE_SETEXCHANGE_REQUEST
	optional Zone_SetExchange_Response		m_stZone_SetExchange_Response = 141;		//玩家设置兑换信息的返回，对应MSGID_ZONE_SETEXCHANGE_RESPONSE
	optional Zone_ExchangeItem_Request		m_stZone_ExchangeItem_Request = 142;		//玩家兑换的请求，对应MSGID_ZONE_EXCHANGEITEM_REQUEST
	optional Zone_ExchangeItem_Response		m_stZone_ExchangeItem_Response = 143;		//玩家兑换的返回，对应MSGID_ZONE_EXCHANGEITEM_RESPONSE
	optional World_AddLimitNum_Request		m_stWorld_AddLimitNum_Request = 144;		//World修改限量的请求，对应MSGID_WORLD_ADDLIMITNUM_REQUEST
	optional World_AddLimitNum_Response		m_stWorld_AddLimitNum_Response = 145;		//World修改限量的返回，对应MSGID_WORLD_ADDLIMITNUM_RESPONSE
	optional Zone_GetLimitNum_Request		m_stZone_GetLimitNum_Request = 146;			//玩家拉取限量的请求，对应MSGID_ZONE_GETLIMITNUM_REQUEST
	optional Zone_GetLimitNum_Response		m_stZone_GetLimitNum_Response = 147;		//玩家拉取限量的返回，对应MSGID_ZONE_GETLIMITNUM_RESPONSE
	optional World_GetCardNo_Request		m_stWorld_GetCardNo_Request = 148;			//World拉取卡密的请求，对应MSGID_WORLD_GETCARDNO_REQUEST
	optional World_GetCardNo_Response		m_stWorld_GetCardNo_Response = 149;			//World拉取卡密的返回，对应MSGID_WORLD_GETCARDNO_RESPONSE

	//玩家邮件相关协议
	optional Zone_NewMailInfo_Notify		m_stZone_NewMailInfo_Notify = 150;			//玩家新邮件通知，对应MSGID_ZONE_NEWMAILINFO_NOTIFY
	optional Zone_MailOpera_Request			m_stZone_MailOpera_Request = 151;			//玩家邮件操作的请求，对应MSGID_ZONE_MAILOPERA_REQUEST
	optional Zone_MailOpera_Response		m_stZone_MailOpera_Response = 152;			//玩家邮件操作的返回，对应MSGID_ZONE_MAILOPERA_RESPONSE
	optional World_SendMail_Request			m_stWorld_SendMail_Request = 153;			//World发送邮件的请求，对应MSGID_WORLD_SENDMAIL_REQUEST
	optional World_SendMail_Response		m_stWorld_SendMail_Response = 154;			//World发送邮件的返回，对应MSGID_WORLD_SENDMAIL_RESPONSE
	optional World_SystemMailID_Notify		m_stWorld_SystemMailID_Notify = 155;		//World同邮件变化通知，对应MSGID_WORLD_SYSTEMMAILID_NOTIFY
	optional World_GetSystemMail_Request	m_stWorld_GetSystemMail_Request = 156;		//World拉取邮件请求，对应MSGID_WORLD_GETSYSTEMMAIL_REQUEST
	optional World_GetSystemMail_Response	m_stWorld_GetSystemMail_Response = 157;		//World拉取邮件返回，对应MSGID_WORLD_GETSYSTEMMAIL_RESPONSE

	//玩家排行榜相关协议
	optional Zone_GetRankInfo_Request		m_stZone_GetRankInfo_Request = 160;			//玩家排行榜的请求，对应MSGID_ZONE_GETRANKINFO_REQUEST
	optional Zone_GetRankInfo_Response		m_stZone_GetRankInfo_Response = 161;		//玩家排行榜的返回，对应MSGID_ZONE_GETRANKINFO_RESPONSE
	optional World_UpdateRank_Request		m_stWorld_UpdateRank_Request = 162;			//更新排行榜的请求，对应MSGID_WORLD_UPDATERANK_REQUEST
	optional World_UpdateRank_Response		m_stWorld_UpdateRank_Response = 163;		//更新排行榜的返回，对应MSGID_WORLD_UPDATERANK_RESPONSE
	optional World_GetRankInfo_Request		m_stWorld_GetRankInfo_Request = 164;		//拉取排行榜的请求，对应MSGID_WORLD_GETRANKINFO_REQUEST
	optional World_GetRankInfo_Response		m_stWorld_GetRankInfo_Response = 165;		//拉取排行榜的返回，对应MSGID_WORLD_GETRANKINFO_RESPONSE

	//玩家技能相关协议
	optional Zone_UseSkill_Request			m_stZone_UseSkill_Request = 170;			//玩家使用技能的请求，对应MSGID_ZONE_USESKILL_REQUEST
	optional Zone_UseSkill_Response			m_stZone_UseSkill_Response = 171;			//玩家使用技能的返回，对应MSGID_ZONE_USESKILL_RESPONSE
	optional Zone_UseSkill_Notify			m_stZone_UseSkill_Notify = 172;				//玩家使用技能的通知，对应MSGID_ZONE_USESKILL_NOTIFY
	optional Zone_ChooseAimFish_Request		m_stZone_ChooseAimFish_Request = 173;		//玩家选择瞄准的请求，对应MSGID_ZONE_CHOOSEAIMFISH_REQUEST
	optional Zone_ChooseAimFish_Response	m_stZone_ChooseAimFish_Response = 174;		//玩家选择瞄准的返回，对应MSGID_ZONE_CHOOSEAIMFISH_RESPONSE
	optional Zone_ChooseAimFish_Notify		m_stZone_ChooseAimFish_Notify = 175;		//玩家选择瞄准的通知，对应MSGID_ZONE_CHOOSEAIMFISH_NOTIFY

	//玩家VIP相关协议
	optional Zone_GetUserAlms_Request		m_stZone_GetUserAlms_Request = 180;			//玩家领取救济金的请求，对应MSGID_ZONE_GETUSERALMS_REQUEST
	optional Zone_GetUserAlms_Response		m_stZone_GetUserAlms_Response = 181;		//玩家领取救济金的返回，对应MSGID_ZONE_GETUSERALMS_RESPONSE
	optional Zone_UpdateAlms_Notify			m_stZone_UpdateAlms_Notify = 182;			//玩家救济金更新的通知，对应MSGID_ZONE_UPDATEALMS_NOTIFY

	//玩家限量抽奖相关协议
	optional Zone_LimitLottery_Request		m_stZone_LimitLottery_Request = 190;		//玩家限量抽奖的请求，对应MSGID_ZONE_LIMITLOTTERY_REQUEST
	optional Zone_LimitLottery_Response		m_stZone_LimitLottery_Response = 191;		//玩家限量抽奖的返回，对应MSGID_ZONE_LIMITLOTTERY_RESPONSE
	optional Zone_PayLotteryRecord_Request	m_stZone_PayLotteryRecord_Request = 192;	//充值抽奖记录请求，对应MSGID_ZONE_PAYLOTTERYRECORD_REQUEST
	optional Zone_PayLotteryRecord_Response	m_stZone_PayLotteryRecord_Response = 193;	//充值抽奖记录返回，对应MSGID_ZONE_PAYLOTTERYRECORD_RESPONSE
	optional Zone_GetPayOrder_Request		m_stZone_GetPayOrder_Request = 194;			//玩家拉取订单号请求，对应MSGID_ZONE_GETPAYORDER_REQUEST
	optional Zone_GetPayOrder_Response		m_stZone_GetPayOrder_Response = 195;		//玩家拉取订单号返回，对应MSGID_ZONE_GETPAYORDER_RESPONSE

	//玩家走马灯相关协议
	optional Zone_HorseLamp_Notify			m_stZone_HorseLamp_Notify = 200;			//玩家走马灯的通知，对应MSGID_ZONE_HORSELAMP_NOTIFY
	
	//玩家大转盘相关协议
	optional World_UpdatePrizeInfo_Request	m_stWorld_UpdatePrizeInfo_Request = 210;	//World更新中奖请求，对应MSGID_WORLD_UPDATEPRIZEINFO_REQUEST
	optional World_UpdateBetInfo_Request	m_stWorld_UpdateBetInfo_Request = 211;		//World更新下注请求，对应MSGID_WORLD_UPDATEBETINFO_REQUEST
	optional World_UpdateLasvegas_Notify	m_stWorld_UpdateLasvegas_Notify = 212;		//World更新转盘通知，对应MSGID_WORLD_UPDATELASVEGAS_NOTIFY
	optional Zone_EnterLasvegas_Request		m_stZone_EnterLasvegas_Request = 213;		//玩家进出转盘的请求，对应MSGID_ZONE_ENTERLASVEGAS_REQUEST
	optional Zone_EnterLasvegas_Response	m_stZone_EnterLasvegas_Response = 214;		//玩家进出转盘的返回，对应MSGID_ZONE_ENTERLASVEGAS_RESPONSE
	optional Zone_LasvegasBet_Request		m_stZone_LasvegasBet_Request = 215;			//玩家转盘下注的请求，对应MSGID_ZONE_LASVEGASBET_REQUEST
	optional Zone_LasvegasBet_Response		m_stZone_LasvegasBet_Response = 216;		//玩家转盘下注的返回,对应MSGID_ZONE_LASVEGASBET_RESPONSE
	optional Zone_UpdateLasvegas_Notify		m_stZone_UpdateLasvegas_Notify = 217;		//转盘信息更新的通知，对应MSGID_ZONE_UPDATELASVEGAS_NOTIFY
	optional Zone_GetRewardInfo_Request		m_stZone_GetRewardInfo_Request = 218;		//玩家拉取中奖纪录请求，对应MSGID_ZONE_GETREWARDINFO_REQUEST
	optional Zone_GetRewardInfo_Response	m_stZone_GetRewardInfo_Response = 219;		//玩家拉取中奖纪录返回，对应MSGID_ZONE_GETREWARDINFO_RESPONSE

	//玩家登陆奖励相关协议
	optional Zone_GetLoginReward_Request	m_stZone_GetLoginReward_Request = 230;		//玩家登录奖励请求，对应MSGID_ZONE_GETLOGINREWARD_REQUEST
	optional Zone_GetLoginReward_Response	m_stZone_GetLoginReward_Response = 231;		//玩家登录奖励返回，对应MSGID_ZONE_GETLOGINREWARD_RESPONSE

	//玩家充值相关协议
	optional World_UserRecharge_Request		m_stWorld_UserRecharge_Request = 240;		//玩家充值请求，对应MSGID_WORLD_USERRECHARGE_REQUEST
	optional World_UserRecharge_Response	m_stWorld_UserRecharge_Response = 241;		//玩家充值返回，对应MSGID_WORLD_USERRECHARGE_RESPONSE
	optional Zone_GetPayRecord_Request		m_stZone_GetPayRecord_Request = 242;		//玩家拉取充值记录请求，对应MSGID_ZONE_GETPAYRECORD_REQUEST
	optional Zone_GetPayRecord_Response		m_stZone_GetPayRecord_Response = 243;		//玩家拉取充值记录返回，对应MSGID_ZONE_GETPAYRECORD_RESPONSE
	optional Zone_GetPayGift_Request		m_stZone_GetPayGift_Request = 244;			//玩家领取充值礼包请求，对应MSGID_ZONE_GETPAYGIFT_REQUEST
	optional Zone_GetPayGift_Response		m_stZone_GetPayGift_Response = 245;			//玩家领取充值礼包返回，对应MSGID_ZONE_GETPAYGIFT_RESPONSE
	optional Zone_UpdateMonthTime_Notify	m_stZone_UpdateMonthTime_Notify = 246;		//玩家更新月卡时间通知，对应MSGID_ZONE_UPDATEMONTHTIME_NOTIFY
	optional Zone_VipExpUpdate_Notify		m_stZone_VipExpUpdate_Notify = 247;			//玩家VIP经验更新通知，对应MSGID_ZONE_VIPEXPUPDATE_NOTIFY
	optional Zone_UserRecharge_Notify		m_stZone_UserRecharge_Notify = 248;			//玩家充值的通知，对应MSGID_ZONE_USERRECHARGE_NOTIFY
	optional Zone_UserRecharge_Request		m_stZone_UserRecharge_Request = 249;		//玩家充值的请求，对应MSGID_ZONE_USERRECHARGE_REQUEST
	optional Zone_UserRecharge_Response		m_stZone_UserRecharge_Response = 250;		//玩家充值的返回，对应MSGID_ZONE_USERRECHARGE_RESPONSE

	//玩家新手引导协议
	optional Zone_FinGuide_Request			m_stZone_FinGuide_Request = 252;			//玩家完成新手引导请求，对应MSGID_ZONE_FINGUIDE_REQUEST
	optional Zone_FinGuide_Response			m_stZone_FinGuide_Response = 251;			//玩家完成新手引导返回，对应MSGID_ZONE_FINGUIDE_RESPONSE

	//玩家名字头像协议
	optional Zone_UpdateName_Request		m_stZone_UpdateName_Request = 260;			//玩家更新名字的请求，对应MSGID_ZONE_UPDATENAME_REQUEST
	optional Zone_UpdateName_Response		m_stZone_UpdateName_Response = 261;			//玩家更新名字的返回，对应MSGID_ZONE_UPDATENAME_RESPONSE

	//玩家微信充值协议
	optional World_GetUserInfo_Request		m_stWorld_GetUserInfo_Request = 270;		//World拉取玩家信息请求，对应MSGID_WORLD_GETUSERINFO_REQUEST
	optional World_GetUserInfo_Response		m_stWorld_GetUserInfo_Response = 271;		//World拉取玩家信息返回，对应MSGID_WORLD_GETUSERINFO_RESPONSE

	//玩家拉取兑换记录协议
	optional Zone_GetExchangeRec_Request	m_stZone_GetExchangeRec_Request = 280;		//玩家拉取兑换记录请求，对应MSGID_ZONE_GETEXCHANGEREC_REQUEST
	optional Zone_GetExchangeRec_Response	m_stZone_GetExchangeRec_Response = 281;		//玩家拉取兑换记录返回，对应MSGID_ZONE_GETEXCHANGEREC_RESPONSE
	optional World_AddExcRec_Request		m_stWorld_AddExcRec_Request = 282;			//World增加兑换记录请求，对应MSGID_WORLD_ADDEXCREC_REQUEST
	optional World_AddExcRec_Response		m_stWorld_AddExcRec_Response = 283;			//World增加兑换记录返回，对应MSGID_WORLD_ADDEXCREC_RESPONSE
}

message CSMsgHead
{
	optional uint32 uiSessionFd = 1;	//玩家的Session ID
	optional ProtocolMsgID uiMsgID = 2	[default=MSGID_PROTOCOL_INVALID_MSG];		
										//消息的类型编号，用于解析消息结构体
	optional uint32 uin = 3;			//玩家的帐号
}

//客户端和服务器通信的协议
message ProtocolCSMsg
{
	optional CSMsgHead stHead = 1;		//协议头
	optional CSMsgBody stBody = 2;		//协议的结构体
}
